ラウンドの途中でもやり直すボタンを表示するように close #3

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             <div>
               <div v-show="dice_is_zero && status===''">
                 <button @click="endTurn()">{{nextRound}}{{alertFood}}</button>
-                <button @click="loadBuffer">ラウンドの最初からやり直す</button>
               </div>
               <button v-show="status==='' || status==='cooking'" @click="startCooking()">{{cooking_button_str()}}</button>
+              <button v-show="status===''" @click="loadBuffer">ラウンドの最初からやり直す</button>
             </div>
           </div>
           <div class="row space" id="dice_space" v-show="endGame">
