--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <li class="list-group-item action" v-for="command in contracted" v-bind:class="[{hover:activeItem===command},{selected:usedCommand(command.name)},{passive:command.passive},command_style(command.name)]" @mouseover="activeItem=command" @mouseout="activeItem=''" v-on:click="click_command(command)">
                 {{command.name}}<br><span class="des">{{command.des}}</span>
                 <p class="des" v-show="showRest(command)">残り:{{rest}}</p>
-                <button type="button" @click="endCommand(command)" v-show='showButton(command,"終わる")' class="rounded-pill btn-sm">終わる</button>
+                <button type="button" @click="endCommand(command.name)" v-show='showButton(command,"終わる")' class="rounded-pill btn-sm">終わる</button>
                 <button type="button" @click="change_by_worker(command.name)" v-show='showButton(command,"出荷")' class="rounded-pill btn-sm">出荷</button>
                 <button type="button" @click="clickWorkerCommand(command,button)" v-show='showWorkerButtons(command,button)' v-for="button in workerButtons(command.name)" :key="command" class="rounded-pill btn-sm">{{button}}</button>
               </li>
