デイリーモード実装[WIP]

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <div id="app">
-    <h1 class="center">Dicey Farm</h1>
+    <h1 class="center" v-show="mode==='normal'">Dicey Farm</h1>
+    <h1 class="center" v-show="mode==='daily'">Dairy Dicey Farm</h1>
+    
     <div class="right">
       制作：vivit_jc
       <a href="https://twitter.com/vivit_jc">Twitter</a>&nbsp;
@@ -24,6 +26,7 @@
     <div class="container"  v-show="viewStatus==='game'">
       <div class="row">
         <div class="col-12 col-lg-2 space" id="resources_space">
+          <button type="button" @click="changeMode" class="btn btn-secondary btn-sm">{{mode_str}}</button>
           <div>
             <button type="button" @click="showHowToPlay" class="btn btn-secondary btn-sm">遊び方</button>
             <button type="button" @click="showRules" class="btn btn-secondary btn-sm">ルール説明</button>
@@ -43,14 +46,14 @@
         </div>
         <div class="col">
           <div class="row space" id="dice_space" v-show="!endGame">
-            <div class="row">
-                {{turn}} / 8ラウンド目
-                <small>各ラウンドで使用できるダイス数： {{turn_seq}}</small>
-                <ul class="list-group list-group-horizontal">
-                  <li class="list-group-item" v-for="die in dice" v-bind:class="[{hover:activeItem===die},{hold:holdingDie===die}]" @mouseover="activeItem=die" @mouseout="activeItem=''"  v-on:click="click_die(die)">
+            <div>
+              <div>{{turn}} / 8ラウンド目 <span v-show="mode==='daily'">[daily mode]</span></div>
+              <small>各ラウンドで使用できるダイス数： {{turn_seq}}</small>
+              <ul class="list-group list-group-horizontal">
+                <li class="list-group-item" v-for="die in dice" v-bind:class="[{hover:activeItem===die},{hold:holdingDie===die}]" @mouseover="activeItem=die" @mouseout="activeItem=''"  v-on:click="click_die(die)">
                     <img :src=dice_img(die.num) class="die">
-                  </li>
-                </ul>
+                </li>
+              </ul>
             </div>
             <div>
               <div v-show="dice_is_zero && status===''">
