省略表記モードの実装

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <div class="row">
         <div class="col-12 col-lg-2 space" id="resources_space">
           <button type="button" @click="changeMode" class="btn btn-secondary btn-sm">{{mode_str}}</button>
+          <button type="button" @click="toggleOmit" class="btn btn-secondary btn-sm">{{omit_str}}</button>
           <div>
             <button type="button" @click="showHowToPlay" class="btn btn-secondary btn-sm">遊び方</button>
             <button type="button" @click="showRules" class="btn btn-secondary btn-sm">ルール説明</button>
@@ -77,7 +78,7 @@
           <div class="row space" id="action_space">
             <ul class="list-group list-group-horizontal" >
               <li class="list-group-item action" v-for="command in commands" v-bind:class="[{hover:activeItem===command},{selected:usedCommand(command.name)},command_style(command)]" @mouseover="activeItem=command" @mouseout="activeItem=''" v-on:click="click_command(command)">
-                {{command.name}}<br><span class="des">{{command.des}}</span>
+                {{command.name}}<br><span class="des" v-show="!(small && omit)">{{command.des}}</span>
                 <p class="des" v-show="showRest(command)">残り:{{rest}}</p>
                 <p class="des" v-show="showSight(command)">[{{showDice()}}]</p>
                 <button type="button" @click="endCommand(command.name)" v-show='showButton(command,"終わる")' class="rounded-pill btn-sm">終わる</button>
