--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
           </div>
           <div class="row space position-relative" id="action_space">
             <span class="position-absolute top-0 start-50 translate-middle badge rounded-pill bg-secondary" v-show="rest>0">残り{{rest}}</span>
+            <span class="position-absolute top-0 start-50 translate-middle badge badge-wide rounded-pill bg-secondary" v-show="badge_str">{{badge_str}}</span>
             <ul class="list-group list-group-horizontal" >
               <li class="list-group-item action" v-for="command in commands" v-bind:class="[{hover:activeItem===command},{selected:usedCommand(command.name)},command_style(command)]" @mouseover="activeItem=command" @mouseout="activeItem=''" v-on:click="click_command(command)">
                 {{command.name}}{{showFieldDie(command.name)}}<br><span class="des" v-show="!(small && omit)">{{command.des}}</span>
